added id chnage:

--- a/src/app/header/inner-header/inner-header.component.html
+++ b/src/app/header/inner-header/inner-header.component.html
@@ -5,7 +5,7 @@
                 <img src="../../assets/images/logo.png" />
             </div>
             <div class="top-section__left__welcome text-right">
-                Welcome :<span> Peddi, Vardhan</span>
+                Welcome :<span> {{'TODo'}}</span>
             </div>
         </div>
         <div class="top-section__right text-right">
