--- a/src/app/dashboard/self-assessment-dashboard/self-assessment-dashboard.component.html
+++ b/src/app/dashboard/self-assessment-dashboard/self-assessment-dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="body-wrapper">
         <div class="search-container">
             <div class="search-container__title">
-                <h1>Self Assessment Dashbroad</h1>
+                <h1>Self Assessment Dashboard</h1>
             </div>
             <div class="search-container__search text-right">
                 <form>
