--- a/src/app/dashboard/self-assessment-dashboard/self-assessment-dashboard.component.scss
+++ b/src/app/dashboard/self-assessment-dashboard/self-assessment-dashboard.component.scss
@@ -132,6 +132,7 @@
       .left{
         width: calc(100% - 40px);
         .card-box{
+            cursor: pointer;
           .box{
             display: flex;
             width: $width-100;
